JEKT-1508 Switch to Large Clusters 🔁 Modified     - Job        - P01_PIPELINE_JOB        - BBM_PIPELINE_JOB        - MRS_PIPELINE_JOB        - TAI_PIPELINE_JOB        - ATL_PIPELINE_JOB        - JET_PIPELINE_JOB        - DEU_PIPELINE_JOB        - JEM_PIPELINE_JOB        - BWI_PIPELINE_JOB        - BBL_PIPELINE_JOB        - HCS_PIPELINE_JOB        - GEU_PIPELINE_JOB        - VST_PIPELINE_JOB        - HM2_PIPELINE_JOB        - FSN_PIPELINE_JOB        - ANS_PIPELINE_JOB        - JES_PIPELINE_JOB        - SJD_PIPELINE_JOB        - BBA_PIPELINE_JOB        - BW2_PIPELINE_JOB        - JSW_PIPELINE_JOB        - BBN_PIPELINE_JOB        - MTR_PIPELINE_JOB        - SVS_PIPELINE_JOB        - DJD_PIPELINE_JOB        - GMD_PIPELINE_JOB        - MTK_PIPELINE_JOB        - LNX_PIPELINE_JOB        - JNS_PIPELINE_JOB        - MBP_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -6397,7 +6397,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -6416,7 +6416,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 13:44:33'
-    modifiedAt: '2023-04-25 18:46:41'
+    modifiedAt: '2023-04-27 16:57:35'
     author: smille29@its.jnj.com
   jobs/DEV_BBA_PIPELINE_JOB:
     name: BBA_PIPELINE_JOB
@@ -6425,7 +6425,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -6458,7 +6458,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 9 ? * 7 *
     timeout: null
     alerting:
@@ -6492,7 +6492,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 8 ? * 7 *
     timeout: null
     alerting:
@@ -6526,7 +6526,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 11 ? * 7 *
     timeout: null
     alerting:
@@ -6550,7 +6550,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:23:52'
-    modifiedAt: '2023-04-26 13:38:45'
+    modifiedAt: '2023-04-27 16:59:04'
     author: smille29@its.jnj.com
   jobs/DEV_HCS_PIPELINE_JOB:
     name: HCS_PIPELINE_JOB
@@ -6559,7 +6559,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 30 2 ? * 7 *
     timeout: null
     alerting:
@@ -6584,7 +6584,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:25:32'
-    modifiedAt: '2023-04-26 13:25:49'
+    modifiedAt: '2023-04-27 16:55:50'
     author: smille29@its.jnj.com
   jobs/DEV_MBP_PIPELINE_JOB:
     name: MBP_PIPELINE_JOB
@@ -6593,7 +6593,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 10 ? * 7 *
     timeout: null
     alerting:
@@ -6618,7 +6618,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:26:51'
-    modifiedAt: '2023-04-26 13:37:12'
+    modifiedAt: '2023-04-27 16:59:01'
     author: smille29@its.jnj.com
   jobs/DEV_P01_PIPELINE_JOB:
     name: P01_PIPELINE_JOB
@@ -6627,7 +6627,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 6 ? * 7 *
     timeout: null
     alerting:
@@ -6652,7 +6652,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:27:50'
-    modifiedAt: '2023-04-26 13:41:40'
+    modifiedAt: '2023-04-27 16:59:09'
     author: smille29@its.jnj.com
   jobs/DEV_SVS_PIPELINE_JOB:
     name: SVS_PIPELINE_JOB
@@ -6661,7 +6661,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -6683,7 +6683,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:30:48'
-    modifiedAt: '2023-04-26 13:49:56'
+    modifiedAt: '2023-04-27 16:59:15'
     author: smille29@its.jnj.com
   jobs/DEV_ANS_PIPELINE_JOB:
     name: ANS_PIPELINE_JOB
@@ -6692,7 +6692,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 0 ? * 7 *
     timeout: null
     alerting:
@@ -6707,7 +6707,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:40:15'
-    modifiedAt: '2023-04-10 19:22:00'
+    modifiedAt: '2023-04-27 16:57:26'
     author: smille29@its.jnj.com
   jobs/DEV_BBM_PIPELINE_JOB:
     name: BBM_PIPELINE_JOB
@@ -6716,7 +6716,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 0 ? * 7 *
     timeout: null
     alerting:
@@ -6731,7 +6731,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:41:31'
-    modifiedAt: '2023-04-10 19:21:58'
+    modifiedAt: '2023-04-27 16:57:15'
     author: smille29@its.jnj.com
   jobs/DEV_BWI_PIPELINE_JOB:
     name: BWI_PIPELINE_JOB
@@ -6740,7 +6740,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 30 1 ? * 7 *
     timeout: null
     alerting:
@@ -6771,7 +6771,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -6793,7 +6793,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:44:07'
-    modifiedAt: '2023-04-26 13:20:52'
+    modifiedAt: '2023-04-27 16:58:15'
     author: smille29@its.jnj.com
   jobs/DEV_MTK_PIPELINE_JOB:
     name: MTK_PIPELINE_JOB
@@ -6802,7 +6802,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 0 ? * 7 *
     timeout: null
     alerting:
@@ -6817,7 +6817,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 15:06:37'
-    modifiedAt: '2023-04-10 19:21:59'
+    modifiedAt: '2023-04-27 16:56:50'
     author: smille29@its.jnj.com
   jobs/DEV_LNX_PIPELINE_JOB:
     name: LNX_PIPELINE_JOB
@@ -6826,7 +6826,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 0 ? * 7 *
     timeout: null
     alerting:
@@ -6841,7 +6841,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:15:06'
-    modifiedAt: '2023-04-10 19:22:08'
+    modifiedAt: '2023-04-27 16:57:29'
     author: smille29@its.jnj.com
   jobs/DEV_TAI_PIPELINE_JOB:
     name: TAI_PIPELINE_JOB
@@ -6850,7 +6850,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 30 4 ? * 7 *
     timeout: null
     alerting:
@@ -6873,7 +6873,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:16:30'
-    modifiedAt: '2023-04-26 13:48:46'
+    modifiedAt: '2023-04-27 16:59:13'
     author: smille29@its.jnj.com
   jobs/DEV_VST_PIPELINE_JOB:
     name: VST_PIPELINE_JOB
@@ -6882,7 +6882,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 0 ? * 7 *
     timeout: null
     alerting:
@@ -6897,7 +6897,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:17:29'
-    modifiedAt: '2023-04-10 19:22:11'
+    modifiedAt: '2023-04-27 16:57:04'
     author: smille29@its.jnj.com
   jobs/DEV_GEU_PIPELINE_JOB:
     name: GEU_PIPELINE_JOB
@@ -6906,7 +6906,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 30 1 ? * 7 *
     timeout: null
     alerting:
@@ -6929,7 +6929,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:18:46'
-    modifiedAt: '2023-04-26 13:22:35'
+    modifiedAt: '2023-04-27 16:58:23'
     author: smille29@its.jnj.com
   jobs/DEV_BW2_PIPELINE_JOB:
     name: BW2_PIPELINE_JOB
@@ -6938,7 +6938,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 12 ? * 7 *
     timeout: null
     alerting:
@@ -6959,7 +6959,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:19:52'
-    modifiedAt: '2023-04-26 13:13:23'
+    modifiedAt: '2023-04-27 16:57:55'
     author: smille29@its.jnj.com
   jobs/DEV_DEU_PIPELINE_JOB:
     name: DEU_PIPELINE_JOB
@@ -6968,7 +6968,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 30 5 ? * 7 *
     timeout: null
     alerting:
@@ -6990,7 +6990,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:22:23'
-    modifiedAt: '2023-04-26 13:17:48'
+    modifiedAt: '2023-04-27 16:58:00'
     author: smille29@its.jnj.com
   jobs/DEV_DJD_PIPELINE_JOB:
     name: DJD_PIPELINE_JOB
@@ -6999,7 +6999,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 0 ? * 7 *
     timeout: null
     alerting:
@@ -7027,7 +7027,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 30 1 ? * 7 *
     timeout: null
     alerting:
@@ -7048,7 +7048,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:23:35'
-    modifiedAt: '2023-04-26 13:24:30'
+    modifiedAt: '2023-04-27 16:58:29'
     author: smille29@its.jnj.com
   jobs/DEV_JEM_PIPELINE_JOB:
     name: JEM_PIPELINE_JOB
@@ -7057,7 +7057,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 0 ? * 7 *
     timeout: null
     alerting:
@@ -7079,7 +7079,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:25:27'
-    modifiedAt: '2023-04-26 13:28:20'
+    modifiedAt: '2023-04-27 16:58:51'
     author: smille29@its.jnj.com
   jobs/DEV_JES_PIPELINE_JOB:
     name: JES_PIPELINE_JOB
@@ -7088,7 +7088,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -7110,7 +7110,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:26:11'
-    modifiedAt: '2023-04-26 13:33:12'
+    modifiedAt: '2023-04-27 16:58:56'
     author: smille29@its.jnj.com
   jobs/DEV_JET_PIPELINE_JOB:
     name: JET_PIPELINE_JOB
@@ -7119,7 +7119,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -7141,7 +7141,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:26:51'
-    modifiedAt: '2023-04-26 13:34:42'
+    modifiedAt: '2023-04-27 16:58:59'
     author: smille29@its.jnj.com
   jobs/DEV_JNS_PIPELINE_JOB:
     name: JNS_PIPELINE_JOB
@@ -7150,7 +7150,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 0 ? * 7 *
     timeout: null
     alerting:
@@ -7165,7 +7165,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:27:27'
-    modifiedAt: '2023-04-25 20:51:36'
+    modifiedAt: '2023-04-27 16:57:39'
     author: smille29@its.jnj.com
   jobs/DEV_JSW_PIPELINE_JOB:
     name: JSW_PIPELINE_JOB
@@ -7174,7 +7174,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -7196,7 +7196,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:28:09'
-    modifiedAt: '2023-04-26 13:32:40'
+    modifiedAt: '2023-04-27 16:58:54'
     author: smille29@its.jnj.com
   jobs/DEV_MTR_PIPELINE_JOB:
     name: MTR_PIPELINE_JOB
@@ -7205,7 +7205,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
@@ -7225,7 +7225,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:28:47'
-    modifiedAt: '2023-04-26 13:39:52'
+    modifiedAt: '2023-04-27 16:59:06'
     author: smille29@its.jnj.com
   jobs/DEV_SJD_PIPELINE_JOB:
     name: SJD_PIPELINE_JOB
@@ -7234,7 +7234,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 0 ? * 7 *
     timeout: null
     alerting:
@@ -7256,7 +7256,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:29:19'
-    modifiedAt: '2023-04-26 13:47:16'
+    modifiedAt: '2023-04-27 16:59:11'
     author: smille29@its.jnj.com
   jobs/JOB_MD_BOM_HDR:
     name: JOB_MD_BOM_HDR
@@ -7690,7 +7690,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 8 ? * 7 *
     timeout: null
     alerting:
@@ -7705,9 +7705,9 @@ jobs:
       clusterMode:
         Single: {}
       clusterId: null
-    enabled: null
+    enabled: false
     createdAt: '2023-04-26 20:17:30'
-    modifiedAt: '2023-04-27 13:24:45'
+    modifiedAt: '2023-04-27 16:54:41'
     author: smille29@its.jnj.com
 functions:
   author: null
