--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -5528,6 +5528,33 @@ jobs:
     createdAt: '2023-04-14 14:59:50'
     modifiedAt: '2023-04-14 15:00:18'
     author: jcovezd1@its.jnj.com
+  jobs/JOB_MD_PLNT:
+    name: JOB_MD_PLNT
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/SAP_01_MD_PLNT
+    - pipelines/JDE_02_MD_PLNT_MTR
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-27 17:24:54'
+    modifiedAt: '2023-04-27 17:37:30'
+    author: mbolado1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
