JEKT-1395 ❇️ New     - Dataset        - DS_JDE_01_F4201
🔁 Modified
    - Pipeline
       - JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1711,9 +1711,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-27 15:31:54'
-    modifiedAt: '2023-04-27 15:32:20'
+    modifiedAt: '2023-04-27 17:43:27'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_JDE_01_F4201
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -6376,6 +6377,21 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-04-13 02:19:30'
         modifiedAt: '2023-04-13 02:19:30'
+  datasets/DS_JDE_01_F4201:
+    name: DS_JDE_01_F4201
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-04-27 17:43:22'
+    modifiedAt: '2023-04-27 17:43:22'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-04-27 17:43:22'
+        modifiedAt: '2023-04-27 17:43:22'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
