--- a/src/datasets/MD_SLS_ORDR_SCHED_LINE_DELV/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_SCHED_LINE_DELV/pbt_aspects.yml
@@ -402,7 +402,7 @@ schema:
       mappings: []
       tags: []
   - name: HAND_OVR_LOC_DTTM
-    type: timestamp
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -606,6 +606,13 @@ schema:
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _deleted_
+    type: string
     nullable: false
     metadata:
       description: ''
