--- a/src/datasets/MD_SLS_ORDR_SCHED_LINE_DELV/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_SCHED_LINE_DELV/pbt_aspects.yml
@@ -402,7 +402,7 @@ schema:
       mappings: []
       tags: []
   - name: HAND_OVR_LOC_DTTM
-    type: void
+    type: timestamp
     nullable: true
     metadata:
       description: ''
