--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1597,11 +1597,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-26 18:25:43'
-    modifiedAt: '2023-04-26 20:19:33'
+    modifiedAt: '2023-04-27 18:58:47'
     datasets:
       inputs:
       - datasets/DS_SAP_RSEG
-      outputs: []
+      outputs:
+      - datasets/MD_DOC_ITM_INCM_INVC
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1730,7 +1731,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-27 18:58:47'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
