enable auto deploy

--- a/manifest-advanced.yaml
+++ b/manifest-advanced.yaml
@@ -340,7 +340,8 @@ environments:
     createMergeTags:
       enabled: true
       credentialsId: sourcecode-bitbucket
-
+    deploy:
+        enabled: true
   
   #############################
   ############# BETA
