JEKT-1421 🔁 Modified     - Pipeline        - sap_md_doc_itm_incm_invc_hm2     - Dataset        - MD_DOC_ITM_INCM_INVC

--- a/src/datasets/MD_DOC_ITM_INCM_INVC/pbt_aspects.yml
+++ b/src/datasets/MD_DOC_ITM_INCM_INVC/pbt_aspects.yml
@@ -66,7 +66,7 @@ schema:
       mappings: []
       tags: []
   - name: DIFF_AMT
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -164,14 +164,14 @@ schema:
       mappings: []
       tags: []
   - name: RETN_IN_PCT
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RETN_AMT_IN_DOC_CRNCY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -213,21 +213,21 @@ schema:
       mappings: []
       tags: []
   - name: STK_PSTNG_INCM_PREV_YR
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: STK_PSTNG_INCM_INVC_PREV
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: STK_PSTNG_LINE_INCM_INVC
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -318,21 +318,21 @@ schema:
       mappings: []
       tags: []
   - name: INVC_AMT_DOC_CRNCY_INVC
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_INVC_IN_INVC_PO_PRC
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_INVC_IN_INVC_PO_ORDR
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -374,14 +374,14 @@ schema:
       mappings: []
       tags: []
   - name: VAL_TOT_STK_PREV_PER
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: VAL_TOT_VALUT_STK
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -395,7 +395,7 @@ schema:
       mappings: []
       tags: []
   - name: DELV_COST_SHR_ITM_VAL
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -535,14 +535,14 @@ schema:
       mappings: []
       tags: []
   - name: TOT_VALUT_STK_PREV_PER
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: TOT_VALUT_STK
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -556,7 +556,7 @@ schema:
       mappings: []
       tags: []
   - name: QTY_PRCH_ORDR_PRC_UNIT
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -570,7 +570,7 @@ schema:
       mappings: []
       tags: []
   - name: QTY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -598,7 +598,7 @@ schema:
       mappings: []
       tags: []
   - name: AMT_IN_DOC_CRNCY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
