JEKT-1272 - 🔁 Modified - Set up for HMD and HM2     - Dataset        - DS_SAP_01_VBAK        - DS_SAP_01_VBRK        - DS_SAP_01_VBPA        - MD_SLS_DOC_PTNR_FUNC     - Pipeline        - SAP_MD_SLS_DOC_PTNR_FUNC_HMD

--- a/src/datasets/DS_SAP_01_VBPA/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_VBPA/pbt_aspects.yml
@@ -2,7 +2,7 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: _deleted_
+  - name: MANDT
     type: string
     nullable: true
     metadata:
@@ -24,13 +24,6 @@ schema:
       mappings: []
       tags: []
   - name: PARVW
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MANDT
     type: string
     nullable: true
     metadata:
@@ -177,6 +170,55 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: _DATAAGING
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DUMMY_SDDOCPARTNER_INCL_EEW_PS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ASSIGNED_BP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ADDR_OPERATION
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ADDR_TYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BP_REF_ADRNR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SDM_VERSION
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
@@ -212,7 +254,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _infa_bigint_sequence_
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
