--- a/src/datasets/DS_SAP_01_KNA1/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_KNA1/pbt_aspects.yml
@@ -842,13 +842,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: STCD5
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: XICMS
     type: string
     nullable: true
@@ -1073,27 +1066,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: FEE_SCHEDULE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DUNS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DUNS4
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: PSOFG
     type: string
     nullable: true
@@ -1192,217 +1164,175 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDLN20B
+  - name: ZZHIN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEV0121B
+  - name: ZZVISN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEXPDATE
+  - name: ZZTRICODE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDBRATING
+  - name: ZZDEA
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZAGREEEXP
+  - name: ZZMII
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZTAXNO
+  - name: ZZDDD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZVATTIN
+  - name: ZZORIGIN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZCSTTIN
+  - name: ZZOWNDIST
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDLN20B_1
+  - name: ZZNATLACCT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEV0121B_1
+  - name: ZZMASTACCT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEXPDATE_1
+  - name: ZZGLN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDLN20B_2
+  - name: ZZFSI
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEV0121B_2
+  - name: ZZEDICHAN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEXPDATE_2
+  - name: ZZGHX
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDLN20B_3
+  - name: ZZGATECHAN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEV0121B_3
+  - name: ZZEDINUM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEXPDATE_3
+  - name: ZZLIC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDLN20B_4
+  - name: ZZIDORDER
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEV0121B_4
+  - name: ZZSHUOM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEXPDATE_4
+  - name: ZZDISTR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZLIC1
+  - name: ZZASN_IND
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZVALID1
+  - name: ZZREPUB_IND
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZLIC2
+  - name: ZZGLN_IND
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZVALID2
+  - name: ZZGTIN_IND
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZLIC3
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZVALID3
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZLIC4
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZVALID4
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZLIC5
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZVALID5
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SURGEON
+  - name: STCD5
     type: string
     nullable: true
     metadata:
@@ -1522,13 +1452,6 @@ schema:
       mappings: []
       tags: []
   - name: DECREGPC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZINV_CONSOL
     type: string
     nullable: true
     metadata:
