--- a/src/datasets/MD_SLS_ORDR_SCHED_LINE_DELV/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_SCHED_LINE_DELV/pbt_aspects.yml
@@ -59,14 +59,14 @@ schema:
       mappings: []
       tags: []
   - name: RQST_DELV_DTTM
-    type: timestamp
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: GI_DTTM
-    type: timestamp
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -87,14 +87,14 @@ schema:
       mappings: []
       tags: []
   - name: DELV_BLK_CD
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV_BLK_DESC
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -108,6 +108,454 @@ schema:
       mappings: []
       tags: []
   - name: LD_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SCHED_LINE_CAT
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ITM_RLVNT_DELV
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ARR_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REQ_QTY_MGMT_SKU
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BASE_UNIT_OF_MEAS
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REQ_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REQ_TYPE
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PLNG_TYPE
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BUSN_DOC_NUM
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BUSN_ITM_NUM
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SCHED_LINE
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: EARLY_POSBL_RESV_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MAINT_RQST
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRCH_REQSN_NUM
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ORDR_TYPE
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRCHSNG_DOC_CAT
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CNFRM_STS_SCHED_LINE
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: INVC_RCPT_IN
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RTN_RTRN_PKGNG_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DT_TYPE
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CORR_QTY_SLS_UNIT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GRP_DEF_STRC_DATA
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RLSE_TYPE
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FCST_DELV_SCHED_NUM
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CMT_QTY
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SIZE_2
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SIZE_3
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UNIT_MEAS_SIZE_1_TO_3
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FRML_KEY_VAR_SIZE_ITM
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: NUMRTR_CONV_SLS_QTY_INTO_SKU
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DENOM_CONV_SLS_QTY_INTO_SKU
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AVLBLTY_CNFRM_AUTMT
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MVMT_TYPE
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ITM_NUM_PRCH_REQSN
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SCHED_LINE_TYPE_EDI
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ORDR_NUM
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PLAN_ORDR
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BOM_EXPLS_NUM
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CUST_ENGR_CHG_STS
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GUARNTD
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RTE_SCHED
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: HAND_OVR_LOC_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DELV_DT_RULE
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DELV_QTY_BU
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DELV_QTY_SU
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: OPEN_CNFRM_DELV_QTY_BU
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: OPEN_CNFRM_DELV_QTY_SU
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: OPEN_RQST_DELV_QTY_BU
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: OPEN_RQST_DELV_QTY_SU
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DELV_CRT_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SCHED_LINE_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RQR_CLS
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DATA_FIL_VAL_DATA_AGE_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SD_DOC_CRNCY
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: OPEN_DELV_NET_AMT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GUID_RAW_FMT
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LEGAL_CNTL_STS
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RQST_REQ_QTY_BASE_UNIT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CNFRM_REQ_QTY_BASE_UNIT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DUMMY_FUNC_LGTH_1
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ARUN_REQ_ALC_QTY
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ORDR_SCHDLNG_GRP_ID
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REJ_CD_FOR_PRTL_QTY_REJ
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_AVLBLTY_3PTY_ORDR_PLNG_DTTM
     type: timestamp
     nullable: true
     metadata:
