JEKT-1209 new pipeline created from HM2 ❇️ New     - Pipeline        - SAP_MD_MATL_HM2
🔁 Modified
    - Pipeline
       - SAP_MD_MATL_BBA_BBN

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1703,6 +1703,27 @@ pipelines:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_MATL_HM2:
+    name: SAP_MD_MATL_HM2
+    description: MD Material for SAP systems with matching L0 schema and mapping
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-28 09:03:25'
+    modifiedAt: '2023-04-28 09:03:25'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_AUSP_01
+      - datasets/DS_SAP_CABN_01
+      - datasets/DS_SAP_INOB_01
+      - datasets/DS_SAP_MAKT_01
+      - datasets/DS_SAP_MARA_BBA_BBN
+      - datasets/DS_SAP_T134T_BBA_BBL_BBN
+      outputs:
+      - datasets/MD_MATL
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
