JEKT-402 corrected pipeline name (SDJ to SJD) and updated package name 🔁 Modified     - Pipeline        - JDE_MD_MATL_INV_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SJD

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -48,14 +48,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/JDE_01_MD_MATL_INV:
-    name: JDE_MD_MATL_INV_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    name: JDE_MD_MATL_INV_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SJD
     description: 'JDE Systems for MD_MATL_INV '
     author: natkins7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-03-20 08:44:36'
-    modifiedAt: '2023-04-27 10:42:53'
+    modifiedAt: '2023-04-28 09:50:36'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4101
@@ -5439,6 +5439,6 @@ functions:
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
-dependencies: '[]'
+dependencies: []
 projectDependencies: {}
 pipelineConfigurations: {}
