JEKT-402 Changes made due to issue with job having same underlying URL as the MATL_LOC job Goncalo had created. Old job called ALT_UOM with MATL_LOC deleted, and job recreated with correct name this time... ❇️ New     - Job        - JOB_MD_MATL_ALT_UOM
❌ Deleted
    - Job
       - JOB_MD_MATL_ALT_UOM

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -5325,33 +5325,6 @@ jobs:
     createdAt: '2023-04-06 21:07:36'
     modifiedAt: '2023-04-10 19:22:05'
     author: smille29@its.jnj.com
-  jobs/JOB_MD_MATL_LOC:
-    name: JOB_MD_MATL_ALT_UOM
-    description: ''
-    fabricUID: 32
-    scheduler:
-      Databricks: {}
-    cloudProvider: null
-    jobSize: Prophecy_Small
-    scheduleCron: 0 0 0 1/1 * ? *
-    timeout: null
-    alerting:
-      emails: ''
-      onStart: false
-      onSuccess: false
-      onFailure: false
-    pipelines:
-    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
-    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
-    - pipelines/JDE_01_MD_MATL_INV
-    jobClusterMode:
-      clusterMode:
-        Single: {}
-      clusterId: null
-    enabled: null
-    createdAt: '2023-04-07 09:26:56'
-    modifiedAt: '2023-04-28 10:25:36'
-    author: natkins7@its.jnj.com
   jobs/JOB_MD_BILL_DOC_HDR_HM2:
     name: JOB_MD_BILL_DOC_HDR_HM2
     description: ''
@@ -5429,6 +5402,32 @@ jobs:
     createdAt: '2023-04-14 14:59:50'
     modifiedAt: '2023-04-14 15:00:18'
     author: jcovezd1@its.jnj.com
+  jobs/JOB_MD_MATL_ALT_UOM:
+    name: JOB_MD_MATL_ALT_UOM
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-28 11:01:08'
+    modifiedAt: '2023-04-28 11:18:09'
+    author: natkins7@its.jnj.com
 functions:
   author: null
   createdAt: '2023-04-28 08:42:02'
