JEKT-1633 🔁 Modified     - Pipeline        - MD_PRCH_DELV_CNFRMS_5_btb_latam_btb_na        - MD_PRCH_DELV_CNFRMS_11_bw2        - MD_PRCH_DELV_CNFRMS_4_bba        - MD_PRCH_DELV_CNFRMS_10_bwi        - MD_PRCH_DELV_CNFRMS_3_jsw_jem_jet_jes_deu_sjd_gmd        - MD_PRCH_DELV_CNFRMS_2_mtr        - MD_PRCH_DELV_CNFRMS_7_hcs        - MD_PRCH_DELV_CNFRMS_1_mbp        - MD_PRCH_DELV_CNFRMS_6_geu        - MD_PRCH_DELV_CNFRMS_8_mrs        - MD_PRCH_DELV_CNFRMS_9_p01     - Dataset        - MD_PRCH_DELV_CNFRMS

--- a/src/datasets/MD_PRCH_DELV_CNFRMS/pbt_aspects.yml
+++ b/src/datasets/MD_PRCH_DELV_CNFRMS/pbt_aspects.yml
@@ -25,7 +25,7 @@ schema:
       tags: []
   - name: CNFRM_SEQ_NBR
     type: integer
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -59,7 +59,7 @@ schema:
       mappings: []
       tags: []
   - name: MRP_ADJ_QTY
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -95,97 +95,97 @@ schema:
       tags: []
   - name: CO_CD
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ORDER_SUF
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DT_CAT_OF_DELV_DT_SUP_CNFRM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CRT_IN_SUP_CNFRM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SUP_CNFRM_DEL_IN
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CNFRM_RLVNT_TO_MATL_PLNG
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MFR_PART_PRFL
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MATL_NUM_CRSPN_TO_MFR_PART_NUM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: NUM_OF_RMNDR
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: HI_LVL_ITM_OF_BTCH_SPLT_ITM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SEQ_NUM_OF_SUP_CNFRM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV_HAS_STS_IN_PLNT
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV_ITM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -333,6 +333,13 @@ schema:
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _deleted_
+    type: string
     nullable: false
     metadata:
       description: ''
