JEKT-1341 HM2 config & job created ❇️ New     - Job        - JON_MD_PLNT_HM2
🔁 Modified
    - Pipeline
       - SAP_01_MD_PLNT

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -808,7 +808,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-17 19:33:05'
-    modifiedAt: '2023-04-26 12:44:38'
+    modifiedAt: '2023-04-28 13:51:28'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T001K
@@ -5554,6 +5554,31 @@ jobs:
     enabled: null
     createdAt: '2023-04-27 17:24:54'
     modifiedAt: '2023-04-27 17:37:30'
+    author: mbolado1@its.jnj.com
+  jobs/JON_MD_PLNT_HM2:
+    name: JON_MD_PLNT_HM2
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_MD_PLNT
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-28 13:54:53'
+    modifiedAt: '2023-04-28 13:55:30'
     author: mbolado1@its.jnj.com
 functions:
   author: null
