--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1868,6 +1868,21 @@ pipelines:
       - datasets/MD_MATL
     subgraphs: []
     dependencies: {}
+  pipelines/MD_PRCH_DELV_CNFRMS_12:
+    name: MD_PRCH_DELV_CNFRMS_12_hmd
+    description: Mapping pipeline  ['hmd']
+    author: skostadi@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-28 15:27:02'
+    modifiedAt: '2023-04-28 15:31:42'
+    datasets:
+      inputs: []
+      outputs:
+      - datasets/MD_PRCH_DELV_CNFRMS
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/DS_JDE_01_F41002:
     name: DS_JDE_01_F41002
