JEKT-1666 🔁 Modified -  Added missing Source Systems to Object Jobs     - Job        - JOB_MD_MATL_INV        - JOB_MD_PO_SCHED_LINE_DELV        - JOB_MD_PO_HIST        - JOB_MD_MATL_LOC        - JOB_MD_SLS_ORDR_LINE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7395,7 +7395,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-04-04 14:54:35'
-    modifiedAt: '2023-04-27 20:51:49'
+    modifiedAt: '2023-04-28 15:44:03'
     author: natkins7@its.jnj.com
   jobs/JOB_MD_MATL_BOM:
     name: JOB_MD_MATL_BOM
@@ -7449,14 +7449,16 @@ jobs:
     - pipelines/JDE_MD_MATL_LOC_JSW
     - pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02
     - pipelines/JDE_MD_MATL_LOC_JES
+    - pipelines/JDE_MD_MATL_LOC_DJD
     - pipelines/JDE_MD_MATL_LOC_JET
+    - pipelines/SAP_MD_MATL_LOC_HMD
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: false
     createdAt: '2023-04-03 10:09:49'
-    modifiedAt: '2023-04-27 20:51:16'
+    modifiedAt: '2023-04-28 15:02:23'
     author: ggrilo1@its.jnj.com
   jobs/JOB_MD_BILL_DOC_HDR_HM2:
     name: JOB_MD_BILL_DOC_HDR_HM2
@@ -7576,6 +7578,7 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE_hmd
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_geu
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_mrs
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_ATL
@@ -7596,7 +7599,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-04-19 13:29:27'
-    modifiedAt: '2023-04-27 20:51:56'
+    modifiedAt: '2023-04-28 15:46:15'
     author: smille29@its.jnj.com
   jobs/JOB_MD_PO_SCHED_LINE_DELV:
     name: JOB_MD_PO_SCHED_LINE_DELV
@@ -7622,7 +7625,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-04-03 13:50:02'
-    modifiedAt: '2023-04-27 20:50:39'
+    modifiedAt: '2023-04-28 16:00:01'
     author: jcacere7@its.jnj.com
   jobs/JOB_MD_PO_HIST:
     name: JOB_MD_PO_HIST
@@ -7648,7 +7651,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-04-19 05:06:58'
-    modifiedAt: '2023-04-27 20:51:53'
+    modifiedAt: '2023-04-28 15:48:38'
     author: jcacere7@its.jnj.com
   jobs/JOB_MD_SHIP:
     name: JOB_MD_SHIP
