--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1711,14 +1711,14 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-28 09:03:25'
-    modifiedAt: '2023-04-28 14:55:32'
+    modifiedAt: '2023-04-28 16:13:11'
     datasets:
       inputs:
       - datasets/DS_SAP_AUSP_01
       - datasets/DS_SAP_CABN_01
       - datasets/DS_SAP_INOB_01
       - datasets/DS_SAP_MAKT_01
-      - datasets/DS_SAP_MARA_BBA_BBN
+      - datasets/DS_SAP_MARA_HM2
       - datasets/DS_SAP_T134T_BBA_BBL_BBN
       outputs:
       - datasets/MD_MATL
@@ -2870,7 +2870,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-28 16:07:49'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6383,6 +6383,21 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-04-13 02:19:30'
         modifiedAt: '2023-04-13 02:19:30'
+  datasets/DS_SAP_MARA_HM2:
+    name: DS_SAP_MARA_HM2
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-04-28 16:09:56'
+    modifiedAt: '2023-04-28 16:09:56'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-04-28 16:09:56'
+        modifiedAt: '2023-04-28 16:09:56'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
