JEKT-14 - 🔁 Modified - Updated Config, Pipeline Settings     - Pipeline        - SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI        - JDE_MD_BOM_HDR_DEU_SJD_MTR_GMD_JEM_JSW_BW2_JES_JET        - SAP_MD_BOM_HDR_BBA_BBN_HCS_MRS     - Dataset        - MD_BOM_HDR

--- a/src/datasets/MD_BOM_HDR/pbt_aspects.yml
+++ b/src/datasets/MD_BOM_HDR/pbt_aspects.yml
@@ -18,21 +18,21 @@ schema:
       tags: []
   - name: BOM_NUM
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ALT_BOM_NUM
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: BOM_CNTR_NBR
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -45,13 +45,6 @@ schema:
       mappings: []
       tags: []
   - name: CHG_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PREV_HDR_CNTR_NBR
     type: string
     nullable: true
     metadata:
@@ -72,13 +65,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: BOM_UOM_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: BOM_TXT
     type: string
     nullable: true
@@ -86,22 +72,8 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: BOM_STS_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DEL_IND
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BOM_BASE_QTY
-    type: decimal(18,4)
+  - name: BOM_VLD_TO_DTTM
+    type: timestamp
     nullable: true
     metadata:
       description: ''
@@ -123,41 +95,6 @@ schema:
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _l0_upt_
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _pk_
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _pk_md5_
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _l1_upt_
-    type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _deleted_
-    type: string
     nullable: false
     metadata:
       description: ''
