--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -6430,6 +6430,7 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE_ATL
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_MD_MATL_INV_ATL
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
@@ -6441,7 +6442,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 13:44:33'
-    modifiedAt: '2023-04-28 18:53:09'
+    modifiedAt: '2023-04-28 19:22:07'
     author: smille29@its.jnj.com
   jobs/DEV_BBA_PIPELINE_JOB:
     name: BBA_PIPELINE_JOB
