JEKT-1495 (Created Pipeline and Datasets) ❇️ New     - Dataset        - DS_SAP_01_T006        - DS_SAP_01_T006T        - DS_SAP_01_T006A     - Pipeline        - MD_SAP_MATL_UOM_MBP_SVS_P01_HCS_HMD

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -855,6 +855,8 @@ pipelines:
       - datasets/DS_SAP_01_VBPA
       outputs:
       - datasets/MD_SLS_DOC_PTNR_FUNC
+    subgraphs: []
+    dependencies: {}
   pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02:
     name: SAP_MD_MATL_LOC_BBA_BBL_BBN
     description: Pipeline to bba bbl bbn SAP systems for MD_MATL_LOC
@@ -1045,6 +1047,23 @@ pipelines:
       - datasets/DS_JDE_4102
       outputs:
       - datasets/MD_MATL_LOC
+    subgraphs: []
+    dependencies: {}
+  pipelines/MD_SAP_MATL_UOM_MBP_SVS_P01_HCS_HMD:
+    name: MD_SAP_MATL_UOM_MBP_SVS_P01_HCS_HMD
+    description: ''
+    author: ypatel8@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-28 20:12:25'
+    modifiedAt: '2023-04-28 21:21:32'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_T006
+      - datasets/DS_SAP_01_T006A
+      - datasets/DS_SAP_01_T006T
+      outputs: []
     subgraphs: []
     dependencies: {}
 datasets:
@@ -4714,6 +4733,8 @@ datasets:
     author: mbolado1@its.jnj.com
     createdAt: '2023-04-06 17:00:17'
     modifiedAt: '2023-04-13 12:04:57'
+    mode: batch
+    physicalDatasets: {}
   datasets/DS_SAP_01_MARC:
     name: DS_SAP_MARC
     description: ''
@@ -4774,6 +4795,51 @@ datasets:
         author: ggrilo1@its.jnj.com
         createdAt: '2023-03-24 13:52:45'
         modifiedAt: '2023-03-24 13:52:45'
+  datasets/DS_SAP_01_T006:
+    name: DS_SAP_01_T006
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-28 20:42:18'
+    modifiedAt: '2023-04-28 20:43:53'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-28 20:42:18'
+        modifiedAt: '2023-04-28 20:42:18'
+  datasets/DS_SAP_01_T006A:
+    name: DS_SAP_01_T006A
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-28 20:45:33'
+    modifiedAt: '2023-04-28 20:45:33'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-28 20:45:33'
+        modifiedAt: '2023-04-28 20:45:33'
+  datasets/DS_SAP_01_T006T:
+    name: DS_SAP_01_T006T
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-28 20:47:17'
+    modifiedAt: '2023-04-28 20:47:17'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-28 20:47:17'
+        modifiedAt: '2023-04-28 20:47:17'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
