--- a/src/datasets/DS_SAP_01_KNA1/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_KNA1/pbt_aspects.yml
@@ -842,6 +842,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: STCD5
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: XICMS
     type: string
     nullable: true
@@ -1066,6 +1073,27 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: FEE_SCHEDULE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DUNS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DUNS4
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: PSOFG
     type: string
     nullable: true
@@ -1164,175 +1192,217 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ZZHIN
+  - name: ZZDLN20B
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZVISN
+  - name: ZZEV0121B
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZTRICODE
+  - name: ZZEXPDATE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDEA
+  - name: ZZDBRATING
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZMII
+  - name: ZZAGREEEXP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDDD
+  - name: ZZTAXNO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZORIGIN
+  - name: ZZVATTIN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZOWNDIST
+  - name: ZZCSTTIN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZNATLACCT
+  - name: ZZDLN20B_1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZMASTACCT
+  - name: ZZEV0121B_1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZGLN
+  - name: ZZEXPDATE_1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZFSI
+  - name: ZZDLN20B_2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEDICHAN
+  - name: ZZEV0121B_2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZGHX
+  - name: ZZEXPDATE_2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZGATECHAN
+  - name: ZZDLN20B_3
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEDINUM
+  - name: ZZEV0121B_3
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZLIC
+  - name: ZZEXPDATE_3
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZIDORDER
+  - name: ZZDLN20B_4
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZSHUOM
+  - name: ZZEV0121B_4
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDISTR
+  - name: ZZEXPDATE_4
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZASN_IND
+  - name: ZZLIC1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZREPUB_IND
+  - name: ZZVALID1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZGLN_IND
+  - name: ZZLIC2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZGTIN_IND
+  - name: ZZVALID2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: STCD5
+  - name: ZZLIC3
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZVALID3
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZLIC4
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZVALID4
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZLIC5
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZVALID5
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SURGEON
     type: string
     nullable: true
     metadata:
@@ -1452,6 +1522,13 @@ schema:
       mappings: []
       tags: []
   - name: DECREGPC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZINV_CONSOL
     type: string
     nullable: true
     metadata:
