🔁 JEKT-1367     - Pipeline        - SAP_01_MD_CUST

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1629,7 +1629,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-15 17:35:18'
-    modifiedAt: '2023-04-29 02:43:14'
+    modifiedAt: '2023-04-29 13:56:40'
     datasets:
       inputs:
       - datasets/DS_SAP_01_KNA1
@@ -7474,6 +7474,10 @@ functions:
   expressions: {}
 subgraphs: {}
 sqlModels: {}
+sqlMacros: {}
+sqlSeeds: {}
+sqlSources: {}
+sqlUnreferencedSources: {}
 sqlPipeline: null
 dependencies: []
 projectDependencies: {}
